# recommend-a-book

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .vercelignore  COLD_START_FIX.md  README.md  keep-warm.sh  package.json  pnpm-workspace.yaml  render.yaml  turbo.json  vercel-build.js  vercel-prebuild.js  vercel.json
.github/workflows/: keep-warm.yml
apps/api/: .dockerignore  .env.example  .env.render.template  Cargo.toml  DEPLOY.md  DEPLOYMENT.md  Dockerfile  GRAPH_README.md  PINECONE_INTEGRATION.md  PINECONE_STABILITY_REPORT.md  docker-compose.yml  keep-warm-cron.sh  keep-warm.sh  package.json  render.yaml  setup-dev.sh
apps/api/config/: base.toml  development.toml  development.toml.example  local.toml  production.toml  production.toml.example
apps/api/scripts/: deploy.sh
apps/api/src/: app.rs  lib.rs  main.rs  routes.rs
apps/api/src/config/: mod.rs
apps/api/src/error/: mod.rs
apps/api/src/handlers/: graph.rs  health.rs  mod.rs  prewarm.rs  recommendation_handlers.rs  recommendations.rs  search_history.rs
apps/api/src/ml/: huggingface_embedder.rs  mod.rs  sentence_encoder.rs  universal_sentence_encoder.rs
apps/api/src/models/: book.rs  mod.rs  search.rs
apps/api/src/scripts/: build_graph.rs  build_graph.sh  index_books.rs  index_books.sh  setup.sh
apps/api/src/services/: explanation_generator.rs  mod.rs  neo4j.rs  pinecone.rs  query_enhancer.rs  recommendation.rs  recommendation_service.rs  search_history.rs  search_history_service.rs  semantic_classifier.rs  sentence_encoder.rs  supabase.rs  templates.rs
apps/api/src/services/recommendations/: cache.rs  intent.rs  mod.rs  ranking.rs  search.rs  service.rs
apps/api/src/services/utils/: cache.rs  mod.rs  retry.rs
apps/backend/: .npmrc  package.json  render.yaml  tsconfig.json
apps/backend/src/: index.ts  indexBooks.ts  types.ts
apps/backend/src/controllers/: recommendationController.ts
apps/backend/src/routes/: index.ts
apps/backend/src/services/: recommendationService.ts  searchHistoryService.ts
apps/backend/src/types/: index.ts
apps/frontend/: .env.example  .npmrc  eslint.config.js  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
apps/frontend/public/: site.webmanifest
apps/frontend/src/: App.css  App.tsx  index.css  main.tsx
apps/frontend/src/api/: client.ts  config.ts  index.ts  mockData.ts  types.ts
apps/frontend/src/components/: Accordion.tsx  AuthorBadges.tsx  BookDescriptionAccordion.tsx  BookThumbnail.tsx  Empty.tsx  Error.tsx  Header.tsx  Header1.tsx  RecommendationCard.tsx  RecommendationContainer.tsx  RecommendationList.tsx  RecommendationsContainer.tsx  SearchForm.tsx  ThumbnailWithSkeleton.tsx
apps/frontend/src/hooks/: index.ts  useDynamicPadding.ts  useInfiniteScroll.ts  usePrewarm.ts
apps/frontend/src/utils/: animations.ts  coldStartToast.ts  index.ts  messages.ts  prewarm.ts  themeColor.ts
docs/: architecture.md
scripts/keep-warm/: README.md  crontab-example.txt  keep-warm.service  keep-warm.sh  start-background.sh  test-api.sh
temp/: changes.md
