[package]
name = "recommend-a-book-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.32", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures = "0.3"
ndarray = { version = "0.15", features = ["serde"] }
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
once_cell = "1.18"
mockall = "0.11"
rayon = "1.7"
lazy_static = "1.4"
tokenizers = "0.14"
rust-bert = { version = "0.23", default-features = false, features = [
    "download-libtorch",
    "remote",
] }
tch = { version = "0.17", features = ["download-libtorch"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.tch]
opt-level = 3

[profile.dev.package.rust-bert]
opt-level = 3

[profile.dev.package.tokenizers]
opt-level = 3

[profile.dev]
debug = true
split-debuginfo = "unpacked"
