[package]
name = "recommend-a-book-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and related
actix-web = "4.4"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
config = "0.13"
dotenv = "0.15"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Async Runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"

# ML & Text Processing
rust-bert = { version = "0.23", features = ["download-libtorch", "remote"] }
tch = { version = "0.17", features = ["download-libtorch"] }
tokenizers = "0.14"
ndarray = { version = "0.15", features = ["serde"] }

# Vector Operations for Embeddings
pinecone-client = "0.7"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.18"
lazy_static = "1.4"
regex = "1.10"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev.package."*"]
opt-level = 2

# Optimize ML-related packages even in dev mode
[profile.dev.package.tch]
opt-level = 3

[profile.dev.package.rust-bert]
opt-level = 3

[profile.dev.package.tokenizers]
opt-level = 3

[profile.dev]
debug = true
split-debuginfo = "unpacked"
